# MIDIKeyboard-SoundEngine

./: .gitignore  CONTRIBUTING.md  GITHUB_DESCRIPTION.txt  INSTALL.md  LICENSE  QUICKSTART.md  README.md  setup.ps1  setup.sh  test_validate_note.py  verify_build.sh
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/launch_agents/: com.qwertymidi.pico.plist
.github/systemd/: qwerty-midi.service
docs/: CHALLENGES_AND_LEARNINGS.md  README.md  SYMPOSIUM_QA.md
docs/architecture/: ARCHITECTURE_AUDIT.md  SYSTEM_DESIGN.md  SYSTEM_MAP.md
docs/archive/: FIXES_APPLIED.md  README.md  TESTS_READY.md  TEST_VALIDATION_COMPLETE.md  TaskDistribution.md  VELOCITY_IMPLEMENTATION_SUMMARY.md  (+1 more)
midi_sound_engine/: README.md  ai_predict.py  engine.py  mac_keyboard_listener.py  monitor_and_launch.py  pico_listener.py  requirements-macos.txt  requirements.txt  serial_midi_adapter.py
qwerty_midi_pico/: CMakeLists.txt  FLASH.md  README.md  main.c
qwerty_midi_pico/drivers/: README.md
qwerty_midi_pico/drivers/current/: gpio_driver.c  gpio_driver.h  msqt32_shift_register.c  msqt32_shift_register.h  velocity_matrix.c  velocity_matrix.h
qwerty_midi_pico/drivers/legacy/: fake_input.c  fake_input.h  i2c_gpio_expander.c  i2c_gpio_expander.h  keyboard_matrix.c  keyboard_matrix.h
qwerty_midi_pico/legacy_pico/: README.md  pico_gpio_driver.c
qwerty_midi_pico/legacy_simulation/: README.md  gpio_scanner.c  key_map.h  sim_hardware.h  sim_main.c  test_poly.c  test_tone.c  tonegen.c  tonegen.h
qwerty_midi_pico/tests/: README.md  test_velocity_simple.c
(+13 files in other folders)
